notes functionality implemented
